--- a/index.html
+++ b/index.html
@@ -5,9 +5,26 @@
     <meta http-equiv="X-UA-Compatible" content="IE=edge">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
     <title>Sabbir Portfolio</title>
+    <link rel="preconnect" href="https://fonts.googleapis.com">
+    <link rel="preconnect" href="https://fonts.gstatic.com" crossorigin>
+    <link href="https://fonts.googleapis.com/css2?family=Poppins
+    :wght@500;600&display=swap" rel="stylesheet">
     <link rel="stylesheet" href="style.css">
 </head>
 <body>
-    
+    <div>
+        <h1>Welcome To</h1>
+        <h1><span class="orange-color">  Sabbir Howlader</span> World!</h1>
+        <h3>Build Climber and Train Stopper</h3>
+        <p>You might saw me jumping, climbing buildings, and stopping 
+           trains. But nobody pays me a dime for that work. That's why I <br>
+           am learning and mastering web development. I will not stop until 
+           I become the Web Development Hero.</p>
+        <button type="button">HIRE ME!</button>
+    </div>
+    <div>
+        <img src="image/sabbir-01 (2).png" alt="">
+    </div>
+  
 </body>
 </html>
