--- a/index.html
+++ b/index.html
@@ -12,7 +12,8 @@
     <link rel="stylesheet" href="style.css">
 </head>
 <body>
-    <div>
+   <section>
+    <div class="half-width">
         <h1>Welcome To</h1>
         <h1><span class="orange-color">  Sabbir Howlader</span> World!</h1>
         <h3>Build Climber and Train Stopper</h3>
@@ -22,9 +23,9 @@
            I become the Web Development Hero.</p>
         <button type="button">HIRE ME!</button>
     </div>
-    <div>
+    <div class="half-width">
         <img src="image/sabbir-01 (2).png" alt="">
     </div>
-  
+    </section>
 </body>
 </html>
