--- a/index.html
+++ b/index.html
@@ -7,21 +7,21 @@
     <title>Sabbir Portfolio</title>
     <link rel="preconnect" href="https://fonts.googleapis.com">
     <link rel="preconnect" href="https://fonts.gstatic.com" crossorigin>
-    <link href="https://fonts.googleapis.com/css2?family=Poppins
-    :wght@500;600&display=swap" rel="stylesheet">
+    <link href="https://fonts.googleapis.com/css2?family=Poppins:wght@500;
+     600&display=swap" rel="stylesheet">
     <link rel="stylesheet" href="style.css">
 </head>
 <body>
-   <section>
+   <section class="top-banner">
     <div class="half-width">
         <h1>Welcome To</h1>
         <h1><span class="orange-color">  Sabbir Howlader</span> World!</h1>
-        <h3>Build Climber and Train Stopper</h3>
+        <h2>Build Climber and Train Stopper</h2>
         <p>You might saw me jumping, climbing buildings, and stopping 
            trains. But nobody pays me a dime for that work. That's why I <br>
            am learning and mastering web development. I will not stop until 
            I become the Web Development Hero.</p>
-        <button type="button">HIRE ME!</button>
+        <a class="link-button" target="_blank" href="https://www.w3schools.com/"> HIRE ME!</a>
     </div>
     <div class="half-width">
         <img src="image/sabbir-01 (2).png" alt="">
