--- a/index.html
+++ b/index.html
@@ -7,8 +7,7 @@
     <title>Sabbir Portfolio</title>
     <link rel="preconnect" href="https://fonts.googleapis.com">
     <link rel="preconnect" href="https://fonts.gstatic.com" crossorigin>
-    <link href="https://fonts.googleapis.com/css2?family=Poppins:wght@500;
-     600&display=swap" rel="stylesheet">
+    <link href="https://fonts.googleapis.com/css2?family=Poppins:ital,wght@0,500;0,600;1,600;1,800&display=swap" rel="stylesheet">
     <link rel="stylesheet" href="style.css">
 </head>
 <body>
@@ -24,12 +23,12 @@
         <a class="link-button" target="_blank" href="https://www.w3schools.com/"> HIRE ME!</a>
     </div>
     <div class="half-width">
-        <img src="image/sabbir-01 (2).png" alt="">
+        <img src="image/sabbir.png" alt="">
     </div>
     </section>
     <section class="dream-big flexible-container">
         <div class="half-width">
-            <img src="image/jhankar2.png" alt="">
+            <img src="image/sabbir2.png" alt="">
         </div>
         <div class="half-width" >
             <h1>Dream Big</h1>
