--- a/index.html
+++ b/index.html
@@ -20,7 +20,7 @@
            trains. But nobody pays me a dime for that work. That's why I <br>
            am learning and mastering web development. I will not stop until 
            I become the Web Development Hero.</p>
-        <a class="link-button" target="_blank" href="https://www.w3schools.com/"> HIRE ME!</a>
+        <a class="link-button" target="_blank" href="https://www.linkedin.com/in/sabbir-howlader-693ba1211/"> HIRE ME!</a>
     </div>
     <div class="half-width">
         <img src="image/sabbir.png" alt="">
@@ -36,7 +36,7 @@
             <p>I already learned the basic HTML and CSS. I can build any
                 simple website. I can even teach my grandma how to make simple
                 website. My goal is to build 3 websites and learn advanced topics.</p>
-            <a class="link-button" target="_blank" href="https://www.w3schools.com/"> DOWNLOAD RESUM</a>
+            <a class="link-button" target="_blank" href="https://www.linkedin.com/in/sabbir-howlader-693ba1211/"> DOWNLOAD RESUM</a>
         </div>
         
     </section>
